--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             async function add() {
                 const number1 = document.getElementById("one").value;
                 const number2 = document.getElementById("two").value;
-                const response = await fetch("http://localhost:3000/add/" + number1 + "/" + number2);
+                const response = await fetch("https://arithmetic-service-krinashahhhh.onrender.com//add/" + n + "/" + m);
                 const sum = await response.json()
                 document.getElementById("res").value = sum;
             }
